--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,6 +1,6 @@
 /*-----------------------------------------------------------------------------------
 
-    Template Name: Zoomy - E-learning HTML5 Template
+    Template Name: Edentu - Dental E-learning App
     Author: 
     Version: 1.0
 
