--- a/assets/scss/main.css
+++ b/assets/scss/main.css
@@ -1,6 +1,6 @@
 /*-----------------------------------------------------------------------------------
 
-    Template Name: Zoomy - E-learning HTML5 Template
+    Template Name: Edentu - Dental E-learning App
     Author: 
     Version: 1.0
 
