--- a/assets/scss/_blog.scss
+++ b/assets/scss/_blog.scss
@@ -34,7 +34,7 @@
     & h5 {
         color: $theme-color;
         font-weight: 500;
-        text-transform: uppercase;
+        text-transform: none;
     }
     & .sub-title {
         color: $heding;
