--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2786,7 +2786,10 @@ input.main-search-input:-ms-input-placeholder {
   -webkit-box-shadow: 0;
           box-shadow: 0;
 }
-
+.vertical{
+    border-left: 4.5px solid #1A75BC; 
+      position: absolute;
+}
 .blog_btn {
   color: #1B212F;
   font-size: 16px;
@@ -2823,11 +2826,50 @@ input.main-search-input:-ms-input-placeholder {
           animation: float-bob-y infinite 5s linear;
 }
 
+
 @media (max-width: 767px) {
   .sl-shape.shape_01 {
     display: none;
   }
 }
+
+@media (max-width: 1999px) {
+  .vertical {
+    height: 9rem;
+  }
+}
+@media (max-width: 991px) {
+  .vertical {
+    height: 6.8rem;
+  }
+}
+@media (max-width: 767px) {
+ .vertical{
+  height: 5rem;
+ }
+}
+@media (max-width: 471px) {
+ .vertical{
+  height: 7rem;
+ }
+}
+@media (max-width: 392px) {
+ .vertical{
+  height: 9rem;
+ }
+}
+@media (max-width: 349px) {
+ .vertical{
+  height: 10rem;
+ }
+}
+
+@media (min-width: 1200px) {
+  .vertical {
+    height: 7rem;
+  }
+}
+
 
 .sl-shape.shape_02 {
   right: 47.5%;
@@ -2928,7 +2970,6 @@ input.main-search-input:-ms-input-placeholder {
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .slider__img__box {
     text-align: center;
-    overflow: hidden;
     padding-right: 0;
   }
 }
@@ -2944,7 +2985,7 @@ input.main-search-input:-ms-input-placeholder {
   .slider__img__box .img-one {
     width: 100%;
     padding-right: 0;
-  }
+}
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
@@ -2956,7 +2997,7 @@ input.main-search-input:-ms-input-placeholder {
 @media (max-width: 767px) {
   .slider__img__box .img-one {
     padding-right: 0;
-    width: 100%;
+    width: 70%;
   }
 }
 
@@ -3060,6 +3101,7 @@ input.main-search-input:-ms-input-placeholder {
           animation: rotation infinite 55s linear;
 }
 
+
 @media only screen and (min-width: 992px) and (max-width: 1200px) {
   .slider__img__box .slide-shape.img-eight {
     width: 100%;
@@ -3079,6 +3121,12 @@ input.main-search-input:-ms-input-placeholder {
   .slider__img__box .slide-shape.img-eight {
     display: none;
   }
+    .slider__content h5 {
+      font-size: 16px !important;
+    }
+    .br_show{
+      display: inline!important;
+    }
 }
 
 .slider__content {
@@ -3103,15 +3151,52 @@ input.main-search-input:-ms-input-placeholder {
 
 .main-title {
   color: #1B212F;
-  font-size: 56px;
+  font-size: 45px;
   line-height: 1.5;
+  text-align: left!important;
+}
+.main-title-span {
+  color: #1A75BC;
+  font-size: 60px;
+  line-height: 1.5;
+  text-align: left!important;
 }
 
 @media (max-width: 767px) {
   .main-title {
+    font-size: 40px;
+    text-align: center;
+    padding-top: 20px;
+  }
+    .main-title-span {
+      color: #1A75BC;
+      font-size: 55px;
+      
+    }
+}
+@media (max-width: 600px) {
+  .main-title {
+    font-size: 35px;
+    text-align: center;
+    padding-top: 20px;
+  }
+    .main-title-span {
+      color: #1A75BC;
+      font-size: 45px;
+      
+    }
+}
+@media (max-width: 400px) {
+  .main-title {
     font-size: 30px;
     text-align: center;
+    padding-top: 20px;
   }
+    .main-title-span {
+      color: #1A75BC;
+      font-size: 40px;
+      
+    }
 }
 
 .vec-shape {
@@ -4036,13 +4121,18 @@ input.main-search-input:-ms-input-placeholder {
   }
 }
 
-.deal-box h2 {
-  font-size: 40px;
+.deal-box h3 {
+  padding-top: 20px;
+  font-size: 26px;
   line-height: 1.4;
+
 }
 
-.deal-box h2 b {
+
+.deal-box h3 b {
   display: block;
+  font-size: 30px;
+  color: #1A75BC;
 }
 
 .single-box {
@@ -6430,7 +6520,6 @@ background-color: #FFD100;
 .testimonial-authors__avatar {
   width: 85px;
   height: 85px;
-  float: left;
   display: inline-block;
   margin-right: 15px;
 }
@@ -8042,7 +8131,14 @@ background-color: #FFD100;
     padding: 45px 15px;
   }
 }
-
+@media (max-width: 991px) {
+.static-main-pic1{
+display: none !important;
+}
+.static-main-pic2{
+display: block !important;
+}
+}
 .single-contact-box .contact__iocn {
   background: #05AFF2;
   width: 60px;
@@ -8052,9 +8148,16 @@ background-color: #FFD100;
   line-height: 59px;
   margin-right: 30px;
   display: inline-block;
-  float: left;
-}
 
+}
+.carousel-control-next-icon {
+  background-image: url('../img/icon/forth.png')!important;
+  z-index: 10000;
+}
+.carousel-control-prev-icon {
+  background-image: url('../img/icon/back.png')!important;
+  z-index: 10000;
+}
 @media (max-width: 767px) {
   .single-contact-box .contact__iocn {
     float: none;
