--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -298,8 +298,8 @@ label {
 
 .gradient-bg {
   background: -webkit-gradient(linear, left top, left bottom, from(rgba(6, 99, 214, 0.05)), to(rgba(241, 77, 93, 0.03)));
-  background: linear-gradient(#F8FCFF, #F8FCFF);
-  background: -o-linear-gradient(#F8FCFF, #F8FCFF);
+  background: linear-gradient(#f1f9ff, #f1f9ff);
+  background: -o-linear-gradient(#f1f9ff, #f1f9ff);
 }
 
 .gradient-bg-2 {
@@ -750,10 +750,6 @@ section-title
   width: 100%;
   background: #ffffff;
   top: 0;
-  -webkit-animation: 300ms ease-in-out 0s normal none 1 running fadeInDown;
-          animation: 300ms ease-in-out 0s normal none 1 running fadeInDown;
-  -webkit-transition: all 0.4s ease 0s;
-  transition: all 0.4s ease 0s;
   -webkit-box-shadow: 0 0 10px 3px rgba(0, 0, 0, 0.05);
           box-shadow: 0 0 10px 3px rgba(0, 0, 0, 0.05);
 }
@@ -2734,16 +2730,27 @@ input.main-search-input:-ms-input-placeholder {
 .theme_btn2 {
   overflow: hidden;
   color: #ffffff;
-  background: #1A75BC;
-  font-size: 16px;
+  border-radius: 0.5rem;
+  background: black;
+  font-size: 20px;
   font-family: "Manrope", sans-serif;
   font-weight: 400;
   line-height: 1;
-  padding: 15px 25px;
-  border-radius: 20px;
-  display: inline-flex;
-  justify-content: left;
-  align-items: center;
+  position: relative;
+  z-index: 1;
+  cursor: pointer;
+  text-decoration: none;
+  -webkit-transition: all 0.4s ease-in-out;
+  transition: all 0.4s ease-in-out;
+}
+.theme_btn3 {
+  overflow: hidden;
+  color: #ffffff;
+  background: #1A75BC;
+  font-size: 20px;
+  font-family: "Manrope", sans-serif;
+  font-weight: 400;
+  line-height: 1;
   position: relative;
   z-index: 1;
   cursor: pointer;
@@ -3151,14 +3158,13 @@ input.main-search-input:-ms-input-placeholder {
 
 .main-title {
   color: #1B212F;
-  font-size: 45px;
-  line-height: 1.5;
+  font-size: 55px;
+  line-height: 1.3;
   text-align: left!important;
 }
 .main-title-span {
   color: #1A75BC;
-  font-size: 60px;
-  line-height: 1.5;
+  font-size: 66px;
   text-align: left!important;
 }
 
@@ -3247,20 +3253,10 @@ input.main-search-input:-ms-input-placeholder {
   .search__area li {
     display: inline-block;
     text-align: right;
-    margin-bottom: 15px;
     border-radius: 40px;
   }
 }
 
-.search__area li .search_btn {
-  -webkit-transform: translateX(7px);
-          transform: translateX(7px);
-}
-
-.search__area li .search_btn2 {
-  -webkit-transform: translateX(7px);
-          transform: translateX(7px);
-}
 
 @media only screen and (min-width: 1200px) and (max-width: 1600px) {
   .search__area li .search_btn {
@@ -3280,7 +3276,7 @@ input.main-search-input:-ms-input-placeholder {
     display: flex;
       align-items: center;
       justify-content: center;
- 
+ border-radius: 0.9rem ;
   }
 }
 
@@ -3306,9 +3302,16 @@ input.main-search-input:-ms-input-placeholder {
     }
   .search__area li .search_btn2 {
     margin-left: 0;
+    border-radius: 0.5rem !important;
     font-size: 15px;
-    padding: 10px 20px;
+    padding: 2px 5px;
   }
+     .search_btn3 {
+       border-radius: 2rem !important;
+       margin-left: 0;
+
+       padding: 10px 20px !important;
+     }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
@@ -3318,11 +3321,8 @@ input.main-search-input:-ms-input-placeholder {
 #blogContainer {
       height: 100% !important;
     }
-  .search__area li .search_btn {
-    -webkit-transform: translateX(20px);
-            transform: translateX(20px);
   }
-}
+
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   #achiContainer {
       height: 100% !important;
@@ -3330,11 +3330,31 @@ input.main-search-input:-ms-input-placeholder {
 #blogContainer {
       height: 100% !important;
     }
-  .search__area li .search_btn2 {
-    -webkit-transform: translateX(20px);
-            transform: translateX(20px);
-  }
+  
+    
 }
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+.search_btn3 {
+    border-radius: 0.78rem !important;
+    margin-left: 0;
+
+    padding: 16px 20px !important;
+  }
+  
+    
+}
+@media (min-width: 768px) {
+  .store-logo {
+      max-height: 55px;
+      margin-right: 10px;
+    }
+  .store-logo2 {
+      max-height: 28px;
+      margin-right: 10px;
+    }
+}
+
+
 
 @media (max-width: 767px) {
   .search__area li .search_btn {
@@ -3343,12 +3363,17 @@ input.main-search-input:-ms-input-placeholder {
  align-items: center;
  justify-content: center;
  
-  }
-}
-.store-logo{
+  }.store-logo{
  max-height: 30px; 
  margin-right: 10px;
 }
+}
+    .search_btn3 {
+      border-radius: 0.78rem !important;
+      margin-left: 0;
+   
+      padding: 13px 20px !important;
+    }
 .store-text{
   font-size: 1rem;
     text-align: left;
@@ -3363,12 +3388,19 @@ input.main-search-input:-ms-input-placeholder {
       height: 100% !important;
     }
   .search__area li .search_btn2 {
-    border-radius: 0.8rem !important;
+    border-radius: 0.3rem !important;
     margin-left: 0;
     display: flex;
  align-items: center;
  justify-content: center;
-    padding: 0.9rem 1.2rem !important;
+    padding: 2px 10px !important;
+  }
+    .search_btn3 {
+    border-radius: 0.5rem !important;
+    margin-left: 0;
+
+ margin-top: 10px;
+    padding: 7px 20px ;
   }
 .store-logo {
   max-height: 2rem;
@@ -3387,12 +3419,12 @@ input.main-search-input:-ms-input-placeholder {
     height: 100% !important;
   }
   .store-text {
-     font-size: 0.7rem;
-     font-weight: 900;
+     font-size: 1rem;
+     font-weight: 600;
     }
         .store-logo {
-          max-height: 1.7rem;
-          margin-right: 5px;
+          max-height: 2.4rem;
+          margin-right: 10px;
         }
 }
 @media (max-width: 360px) {
@@ -4073,7 +4105,39 @@ input.main-search-input:-ms-input-placeholder {
     display: none;
   }
 }
+@media only screen and (min-width: 576px) and (max-width: 768px) {
+  .store-logo {
+    max-height: 2.5rem !important;
+  }
 
+  .store-logo2 {
+    max-height: 1.2rem;
+  }
+.store-text{
+  font-size: 14px;
+  padding-left: 5px;
+}
+  .search_btn3 {
+    margin-top: 0px;
+    padding: 12px 15px !important;
+  }
+}
+@media (max-width: 567px) {
+  .store-logo {
+      max-height: 2.5rem !important;
+    }
+    .search_btn3{
+      padding: 10px 35px !important;
+margin-bottom: 20px;
+    }
+    .store-logo2{
+      max-height: 1.5rem;
+      padding-right: 10px;
+    }
+    .store-text{
+      font-size: 18px;
+    }
+}
 @media only screen and (min-width: 992px) and (max-width: 1200px) {
   .slider-img-area::after {
     display: none;
@@ -4307,8 +4371,8 @@ input.main-search-input:-ms-input-placeholder {
 .what-blur-shape-one {
   width: 569px;
   height: 569px;
-  background: #E9f3ff;
-  opacity: 0.05;
+  background: #c9ddf7;
+  opacity: 0.5;
   filter: 50px;
   -webkit-filter: blur(50px);
   -moz-filter: blur(50px);
@@ -4684,10 +4748,16 @@ input.main-search-input:-ms-input-placeholder {
   font-weight: 700;
 }
 
-@media only screen and (min-width: 1200px) {
+@media (min-width: 1200px) {
   .z-gallery__content .sub-title {
     font-size: 30px;
   }
+}
+@media (min-width: 992px) {
+  .z-gallery:hover {
+      -webkit-transform: scale(1.1)!important;
+      transform: scale(1.1)!important;
+    }
 }
 
 .z-gallery__content .sub-title a {
@@ -4699,8 +4769,8 @@ input.main-search-input:-ms-input-placeholder {
 background-color: #FFD100;
   -webkit-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
-  -webkit-transform: scale(1.1);
-          transform: scale(1.1);
+  -webkit-transform: scale(0.95);
+          transform: scale(0.95);
 }
 
 .z-gallery:hover .z-gallery__content .sub-title a {
@@ -4715,6 +4785,7 @@ background-color: #FFD100;
   display: block !important;
   margin-bottom: 20px;
 }
+
 
 
 .z-gallery:hover .z-gallery__content .course__meta li{
@@ -4784,7 +4855,18 @@ background-color: #FFD100;
       -ms-flex-align: center;
           align-items: center;
 }
+/* @media (max-width: 768px) {
+  .z-gallery:hover .z-gallery__thumb {
+    display: none;
 
+  }
+  .z-gallery:hover .course__tag {
+    display: none;
+  }
+  .z-gallery:hover .sub-title {
+    padding-top: 20px;
+  }
+} */
 .course__cat__list li a {
   color: #1B212F;
   font-size: 20px;
@@ -5617,7 +5699,7 @@ background-color: #FFD100;
 @media (max-width: 600px) {
   .course-card {
     padding: 0px 2rem;
-    padding-bottom: 2rem !important;
+    
   }
     .logo img {
       max-width: 90%;
